blog/kubernetes-manifests.hold/ingress.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  rules:
  - http:
      paths:
      # - path: /
      #   backend:
      #     serviceName: blog
      #     servicePort: 3000
          
      # - path: /jup
      #   backend:
      #     serviceName: jup
      #     servicePort: 3001
      - path: /myflow
        backend:
          serviceName: myflow
          servicePort: 8080
